icon Updated.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1280,6 +1280,6 @@ a:hover.back-to-top {
 	/* end of extra pages */
 }
 /* end of min-width 1200px */
-#i1 {
+#i1, #i2, #i3 {
 margin-left:100px;	
 }
