--- a/css/styles.css
+++ b/css/styles.css
@@ -1291,5 +1291,9 @@ a:hover.back-to-top {
 }
 .cardx:hover {
     transform: scale(1.05);
-	box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+html, body {
+	background: #fff;
 }
