--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ Table Of Contents:
 Colors:
 - Backgrounds, navbar - black #24262a
 - Backgrounds - light gray #f7f9fb
-- Buttons, icons - blue #0b36a8
+- Buttons, icons - red #ed2024
 - Headings text - black #24262a
 - Body text - dark gray #4d5055
 ******************************************/
@@ -153,8 +153,8 @@ a:hover {
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-	border: 1px solid #0b36a8;
-	background-color: #0b36a8;
+	border: 1px solid #ed2024;
+	background-color: #ed2024;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -165,15 +165,15 @@ a:hover {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #0b36a8; /* needs to stay here because of the color property of a tag */
+	color: #ed2024; /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.625rem 2.625rem 1.625rem 2.625rem;
-	border: 1px solid #0b36a8;
-	background-color: #0b36a8;
+	border: 1px solid #ed2024;
+	background-color: #ed2024;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -184,7 +184,7 @@ a:hover {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #0b36a8; /* needs to stay here because of the color property of a tag */
+	color: #ed2024; /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
 }
 
@@ -350,9 +350,9 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.25rem;
-	border: 1px solid #0b36a8;
+	border: 1px solid #ed2024;
 	border-radius: 32px;
-	background-color: #0b36a8;
+	background-color: #ed2024;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -491,7 +491,7 @@ input[type='checkbox'] {
 }
 
 .navbar .fa-stack-2x {
-	color: #0b36a8;
+	color: #ed2024;
 	transition: all 0.2s ease;
 }
 
@@ -505,7 +505,7 @@ input[type='checkbox'] {
 }
 
 .navbar .fa-stack:hover .fa-stack-1x {
-	color: #0b36a8;
+	color: #ed2024;
 }
 
 .navbar .navbar-toggler {
@@ -568,7 +568,7 @@ input[type='checkbox'] {
 
 .basic-1 .time {
 	margin-bottom: 0.5rem;
-	color: #0b36a8;
+	color: #ed2024;
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 1.5rem;
@@ -608,7 +608,7 @@ input[type='checkbox'] {
 .basic-2 .fas,
 .basic-2 .far {
 	margin-bottom: 1.75rem;
-	color: #0b36a8;
+	color: #ed2024;
 	font-size: 3.5rem;
 }
 
@@ -880,12 +880,12 @@ input[type='checkbox'] {
 }
 
 .footer .fa-stack .fa-stack-2x {
-	color: #0b36a8;
+	color: #ed2024;
 	transition: all 0.2s ease;
 }
 
 .footer .fa-stack:hover .fa-stack-1x {
-	color: #0b36a8;
+	color: #ed2024;
 }
 
 .footer .fa-stack:hover .fa-stack-2x {
@@ -931,7 +931,7 @@ a.back-to-top {
 }
 
 a:hover.back-to-top {
-	background-color: #0b36a8;
+	background-color: #ed2024;
 }
 
 
@@ -973,7 +973,7 @@ a:hover.back-to-top {
 }
 
 .ex-cards-1 .card .fa-stack-2x {
-	color: #0b36a8;
+	color: #ed2024;
 }
 
 .ex-cards-1 .card .fa-stack-1x {
