--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ Colors:
 - Backgrounds, navbar - black #24262a
 - Backgrounds - light gray #f7f9fb
 - Buttons, icons - red #ed2024
-- Headings text - black #24262a
+- Headings text - light gray #f7f9fb
 - Body text - dark gray #4d5055
 ******************************************/
 
@@ -45,7 +45,7 @@ body, p {
 }
 
 h1 {
-	color: #24262a;
+	color: #f7f9fb;
 	font-weight: 700;
 	font-size: 2.5rem;
 	line-height: 3.25rem;
@@ -53,7 +53,7 @@ h1 {
 }
 
 h2 {
-	color: #24262a;
+	color: #f7f9fb;
 	font-weight: 700;
 	font-size: 2rem;
 	line-height: 2.5rem;
@@ -61,7 +61,7 @@ h2 {
 }
 
 h3 {
-	color: #24262a;
+	color: #f7f9fb;
 	font-weight: 700;
 	font-size: 1.75rem;
 	line-height: 2.25rem;
@@ -69,7 +69,7 @@ h3 {
 }
 
 h4 {
-	color: #24262a;
+	color: #f7f9fb;
 	font-weight: 700;
 	font-size: 1.5rem;
 	line-height: 2rem;
@@ -77,7 +77,7 @@ h4 {
 }
 
 h5 {
-	color: #24262a;
+	color: #f7f9fb;
 	font-weight: 700;
 	font-size: 1.25rem;
 	line-height: 1.625rem;
@@ -85,7 +85,7 @@ h5 {
 }
 
 h6 {
-	color: #24262a;
+	color: #f7f9fb;
 	font-weight: 700;
 	font-size: 1rem;
 	line-height: 1.375rem;
