--- a/css/styles.css
+++ b/css/styles.css
@@ -279,8 +279,8 @@ a:hover {
 	padding-top: 1.125rem;
 	padding-bottom: 0.125rem;
 	padding-left: 1.5rem;
-	border: 1px solid white;
-	background-color: #111;
+	border: 1px solid #ed2024;
+	background-color: #ddd;
 	color: #fff;
 	font-size: 0.875rem;
 	line-height: 1.875rem;
@@ -314,8 +314,8 @@ select {
 	height: 14rem; /* used instead of html rows to normalize height between Chrome and IE/FF */
 	padding-top: 1.5rem;
 	padding-left: 1.3125rem;
-	border: 1px solid white;
-	background-color: #111;
+	border: 1px solid #cbcbd1;
+	background-color: #ffffff;
 	color: #fff;
 	font-size: 0.875rem;
 	line-height: 1.5rem;
@@ -325,7 +325,7 @@ select {
 .form-control-input:focus,
 .form-control-select:focus,
 .form-control-textarea:focus {
-	border: 1px solid red;
+	border: 1px solid #a1a1a1;
 	outline: none; /* Removes blue border on focus */
 }
 
