--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -58,7 +58,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #fff;
+  color: #000;
   text-align: left;
   background-color: black;
 }
