--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ h1 {
 }
 
 h2 {
-	color: #f7f9fb;
+	color: #ed2024;
 	font-weight: 700;
 	font-size: 2rem;
 	line-height: 2.5rem;
@@ -60,7 +60,7 @@ h2 {
 }
 
 h3 {
-	color: #f7f9fb;
+	color: #ed2024;
 	font-weight: 700;
 	font-size: 1.75rem;
 	line-height: 2.25rem;
@@ -68,7 +68,7 @@ h3 {
 }
 
 h4 {
-	color: #f7f9fb;
+	color: #ed2024;
 	font-weight: 700;
 	font-size: 1.5rem;
 	line-height: 2rem;
@@ -76,7 +76,7 @@ h4 {
 }
 
 h5 {
-	color: #f7f9fb;
+	color: #ed2024;
 	font-weight: 700;
 	font-size: 1.25rem;
 	line-height: 1.625rem;
@@ -84,7 +84,7 @@ h5 {
 }
 
 h6 {
-	color: #f7f9fb;
+	color: #ed2024;
 	font-weight: 700;
 	font-size: 1rem;
 	line-height: 1.375rem;
