--- a/css/styles.css
+++ b/css/styles.css
@@ -1325,3 +1325,14 @@ html, body {
 .c-red {
 	color: red;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+	display: none;
+  }
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
